<resources>
    <string name="widget_2x1">Flowzr</string>
    <string name="widget_3x1">Flowzr</string>
    <string name="widget_4x1">Flowzr</string>
	<string name="backup">Backup</string>
	<string name="accounts">Accounts</string>
	<string name="blotter">Transactions</string>
	<string name="currencies">Currencies</string>
	<string name="categories">Categories</string>
	<string name="budgets">Budgets</string>
	<string name="projects">Projects</string>
	<string name="ok">OK</string>
	<string name="reset">Reset</string>
	<string name="clear">Clear</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="close">Close</string>
	<string name="edit_account">Edit Account</string>
	<string name="add_account">Add account</string>
	<string name="title">Title</string>
	<string name="payee">Payee</string>
	<string name="currency">Currency</string>
	<string name="add_currency">Add Currency</string>
	<string name="opening_amount">Opening amount</string>
	<string name="limit_amount">Limit amount</string>
	<string name="view">View</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="add_transaction">Add Transaction</string>
	<string name="account">Account</string>
	<string name="category">Category</string>
	<string name="add_category">Add Category</string>
	<string name="income">Income</string>
	<string name="expense">Expense</string>
	<string name="amount">Amount</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="parent">Parent</string>
	<string name="total">Total:</string>
	<string name="filter">Filter</string>
	<string name="no_filter">No filter</string>
	<string name="transfer">Transfer</string>
	<string name="confirmation">Confirmation</string>
	<string name="delete_category_dialog">Delete the category and all sub-categories (if any)?</string>
	<string name="currency_delete_alert">Can\'t delete the currency which is in use.</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="error">Error</string>
	<string name="include_subcategories">Include sub-categories</string>
	<string name="include_subcategories_summary">Add transactions from sub-categories</string>
	<string name="start_date">Start date</string>
	<string name="end_date">End date</string>
	<string name="budget">Budget</string>
	<string name="no_limit">No limit</string>
	<string name="period">Period</string>
	<string name="period_from">Period From</string>
	<string name="period_to">Period To</string>
	<string name="period_recur">Period Recur</string>
	<string name="preferences">Preferences</string>
	<string name="amount_picker">Amount Picker</string>
	<string name="integer_part_title">Number of digits</string>
	<string name="use_hundredth_title">Use hundredths</string>
	<string name="project">Project</string>
	<string name="select_account">Please select account...</string>
	<string name="select_currency">Please select currency...</string>
	<string name="select_category">Please select category...</string>
	<string name="select_project">Please select project...</string>
	<string name="warning">Warning</string>
	<string name="no_accounts">You should start with creating an account. Tap the \'+\' icon...</string>
	<string name="no_budgets">No budgets</string>
	<string name="no_transactions">No transactions</string>
	<string name="no_categories">No categories</string>
	<string name="no_currencies">No currencies</string>
	<string name="no_projects">No projects</string>
	<string name="no_recur">No recur</string>
	<string name="account_from">From Account</string>
	<string name="account_to">To Account</string>
	<string name="amount_from">Amount Out</string>
	<string name="amount_to">Amount In</string>
	<string name="rate">Rate</string>
	<string name="no_rate">No rate</string>
	<string name="transaction">Transaction</string>
	<string name="transaction_title">New Transaction</string>
	<string name="transfer_title">New Transfer</string>
	<string name="about">About</string>
	<string name="about_copyright2">All rights reserved</string>
	<string name="menu">Menu</string>
	<string name="location">Location</string>
	<string name="locations">Locations</string>
	<string name="no_locations">No locations</string>
	<string name="use_gps">Use GPS</string>
	<string name="use_gps_summary">Use GPS to get current location for transaction</string>
	<string name="use_my_location">Use My Location</string>
	<string name="use_my_location_summary">Use My Location to get current location for a new location</string>
	<string name="select_location">Select location</string>
	<string name="no_fix">Unknown location</string>
	<string name="attribute">Attribute</string>
	<string name="attributes">Attributes</string>
	<string name="parent_attributes">Parent attributes</string>
	<string name="change_attributes">Change attributes</string>
	<string name="calculator">Calculator</string>
	<string name="no_attributes">No attributes</string>
	<string name="add_attribute">Add attribute</string>
	<string name="new_attribute">New attribute</string>
	<string-array name="attribute_types">
		<item>Text</item>
		<item>Number</item>
		<item>List</item>
		<item>Checkbox</item>
	</string-array>
	<string name="attribute_type">Type</string>
	<string name="attribute_name">Name</string>
	<string name="attribute_values">Values</string>
	<string name="attribute_values_hint">Use ; to separate values</string>
	<string name="attribute_default_value">Default value</string>
	<string name="checkbox_values">Yes/No</string>
	<string name="checkbox_values_yes">Yes</string>
	<string name="checkbox_values_no">No</string>
	<string name="checkbox_values_hint">Yes;No</string>
	<string name="location_name">Location name</string>
	<string name="satellite_on">Satellite On</string>
	<string name="satellite_off">Satellite Off</string>
	<string name="my_location">My location</string>
	<string name="move_marker_to_center">Marker to center</string>
	<string name="move_go_to_marker">Go to marker</string>
	<string name="tap_location">Tap \'My location\' marker to manually adjust location</string>
	<string name="note">Note</string>
	<string name="reports">Reports</string>
	<string name="zoom_in">Zoom In</string>
	<string name="zoom_out">Zoom Out</string>
	<string name="transaction_screen">New transaction screen</string>
	<string name="transaction_screen_summary">Preferences for new transaction/transfer screen</string>
	<string name="screen_layout">Screen layout</string>
	<string name="show_location">Show location</string>
	<string name="show_location_summary">Show location drop-down</string>
	<string name="show_location_order">Location order</string>
	<string name="show_location_order_summary">Relative position for the location drop down</string>
	<string name="show_payee">Show payee</string>
	<string name="show_payee_summary">Show payee edit box</string>
	<string name="show_note">Show note</string>
	<string name="show_note_summary">Show note edit box</string>
	<string name="show_note_order">Note order</string>
	<string name="show_note_order_summary">Relative position for the note box</string>
	<string name="show_project">Show project</string>
	<string name="show_project_summary">Show project drop-down</string>
	<string name="show_project_order">Project order</string>
	<string name="show_project_order_summary">Relative position for the project drop-down</string>
	<string name="remember_selection">Remember the selection</string>
	<string name="remember_last_account">Last account</string>
	<string name="remember_last_account_summary">Remember the last selected account</string>
	<string name="remember_last_project">Last project</string>
	<string name="remember_last_project_summary">Remember the last project for the selected category</string>
	<string name="interval">Interval</string>
	<string name="recur_interval">Recur Interval</string>
	<string name="recur">Recur</string>
	<string name="gdocs_backup">Google Drive Backup</string>
	<string name="backup_folder">Backup Folder</string>
	<string name="backup_folder_summary">To store backup files create a new folder in My Drive</string>
	<string name="sort_by_title">Sort by title</string>
	<string name="entities">Entities</string>
	<string name="show_picture">Show \'Take picture\'</string>
	<string name="show_picture_summary">Show \'Take picture\' box</string>
	<string name="flowzr_sync">Sync</string>
    <string name="remember_last_category_for_payee">Last category</string>
    <string name="remember_last_category_for_payee_summary">Remember the last category for the chosen payee (or account if payee is disabled)</string>
    <string name="show_category_in_transfer">Transfer Category</string>
    <string name="show_category_in_transfer_summary">Show category select in New Transfer screen</string>
    <string name="auto_backup_enabled">Enable auto-backup</string>
    <string name="auto_backup_enabled_summary">Backup database daily at the specified time</string>
    <string name="auto_backup_time">Auto-backup time</string>
    <string name="auto_backup_time_summary" formatted="false">Do daily backup at %02d:%02d</string>
    <string name="database_backup">Database Backup</string>
    <string name="database_backup_folder">Backup Folder</string>
    <string name="database_backup_folder_summary">Current database backup folder: %s</string>
    <string name="dropbox">Dropbox</string>
    <string name="dropbox_authorize">Authorize</string>
    <string name="dropbox_authorize_summary">Allow Financisto to upload files to your Dropbox</string>
    <string name="dropbox_unlink_summary">Prevent Financisto from uploading files to your Dropbox</string>
    <string name="dropbox_upload_backup">Upload Backups</string>
    <string name="dropbox_upload_backup_summary">Upload database backups to Dropbox</string>
    <string name="dropbox_upload_autobackup">Upload Auto-backups</string>
    <string name="dropbox_upload_autobackup_summary">Upload database auto-backups to Dropbox</string>
    <string name="category_selector">Category selector</string>
    <string name="use_hierarchical_category_selector">Hierarchical selector</string>
    <string name="use_hierarchical_category_selector_summary">Use hierarchical category selector</string>
    <string name="hierarchical_category_selector_select_child_immediately">Confirm automatically</string>
    <string name="hierarchical_category_selector_select_child_immediately_summary">Confirm child category selection automatically</string>
    <string name="hierarchical_category_selector_income_expense">Income/Expense</string>
    <string name="hierarchical_category_selector_income_expense_summary">Group income and expense categories together</string>
    <string name="collapse_blotter_buttons">Collapse Blotter buttons</string>
    <string name="re_index_categories">Re-index</string>
    <string name="show_currency">Show currency</string>
    <string name="show_currency_summary">Show currency selector in new transaction screen</string>
    <string name="show_is_ccard_payment">Show \'Credit Card Payment\'</string>
    <string name="show_is_ccard_payment_summary">Show checkbox to mark credit card payments</string>
    <string name="open_calculator_for_template_transactions">Open Calculator</string>
    <string name="open_calculator_for_template_transactions_summary">Open Calculator for transactions created from template</string>
    <string name="show_payee_in_transfer">Transfer Payee</string>
    <string name="show_payee_in_transfer_summary">Show payee field in New Transfer screen</string>
    <string name="google_drive_backup_account">Backup account</string>
    <string name="google_drive_backup_account_summary">Choose your Google Drive account</string>
    <string name="google_drive_backup_full_readonly">Full read-only access</string>
    <string name="google_drive_backup_full_readonly_summary">Allows read-only access to all files on your Google Drive.</string>
</resources>