<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/transaction_screen"
        android:summary="@string/transaction_screen_summary">

    <PreferenceCategory android:title="@string/screen_layout">

        <CheckBoxPreference android:key="ntsl_show_currency"
            android:title="@string/show_currency"
            android:summary="@string/show_currency_summary"
            android:defaultValue="false"/>

        <CheckBoxPreference android:key="ntsl_show_location"
            android:title="@string/show_location"
            android:summary="@string/show_location_summary"
            android:defaultValue="false"/>
        <ListPreference android:key="ntsl_show_location_order"
            android:title="@string/show_location_order"
            android:summary="@string/show_location_order_summary"
            android:entries="@array/sort_order_entities"
            android:entryValues="@array/sort_order_entities"
            android:dependency="ntsl_show_location" android:defaultValue="5"/>



        <CheckBoxPreference android:key="ntsl_show_payee"
            android:title="@string/show_payee"
            android:summary="@string/show_payee_summary"
            android:defaultValue="true"/>

        <CheckBoxPreference android:key="ntsl_show_note"
                android:title="@string/show_note" android:summary="@string/show_note_summary"
                android:defaultValue="true"/>

        <ListPreference android:key="ntsl_show_note_order"
                android:title="@string/show_note_order"
                android:summary="@string/show_note_order_summary"
                android:entries="@array/sort_order_entities"
                android:entryValues="@array/sort_order_entities"
                android:dependency="ntsl_show_note" android:defaultValue="2"/>

            <CheckBoxPreference android:key="ntsl_show_project"
                android:title="@string/show_project" android:summary="@string/show_project_summary"
                android:defaultValue="true"/>
            <ListPreference android:key="ntsl_show_project_order"
                android:title="@string/show_project_order"
                android:summary="@string/show_project_order_summary"
                android:entries="@array/sort_order_entities"
                android:entryValues="@array/sort_order_entities"
                android:dependency="ntsl_show_project" android:defaultValue="3"/>
            <CheckBoxPreference android:key="ntsl_show_picture"
                android:title="@string/show_picture"
                android:summary="@string/show_picture_summary"
                android:defaultValue="true"/>
            <CheckBoxPreference android:key="ntsl_show_is_ccard_payment"
                android:title="@string/show_is_ccard_payment"
                android:summary="@string/show_is_ccard_payment_summary"
                android:defaultValue="true"/>
            <CheckBoxPreference android:key="ntsl_show_category_in_transfer"
                android:title="@string/show_category_in_transfer"
                android:summary="@string/show_category_in_transfer_summary"
                android:defaultValue="true"/>
            <CheckBoxPreference android:key="ntsl_show_payee_in_transfers"
                android:title="@string/show_payee_in_transfer"
                android:summary="@string/show_payee_in_transfer_summary"
                android:defaultValue="false"/>
            <CheckBoxPreference android:key="ntsl_open_calculator_for_template_transactions"
                android:title="@string/open_calculator_for_template_transactions"
                android:summary="@string/open_calculator_for_template_transactions_summary"
                android:defaultValue="false"/>
        </PreferenceCategory>

    <PreferenceCategory android:title="@string/remember_selection">
        <CheckBoxPreference android:key="remember_last_account"
            android:title="@string/remember_last_account"
            android:summary="@string/remember_last_account_summary"
            android:defaultValue="true"/>
        <CheckBoxPreference android:key="remember_last_category"
            android:title="@string/remember_last_category_for_payee"
            android:summary="@string/remember_last_category_for_payee_summary"
            android:defaultValue="false"/>
        <!--
        <CheckBoxPreference android:key="remember_last_location"
            android:title="@string/remember_last_location"
            android:summary="@string/remember_last_location_summary"
            android:defaultValue="false" android:dependency="remember_last_category"/>
          -->
        <CheckBoxPreference android:key="remember_last_project"
            android:title="@string/remember_last_project"
            android:summary="@string/remember_last_project_summary"
            android:defaultValue="false" android:dependency="remember_last_category"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_selector">
        <CheckBoxPreference android:key="use_hierarchical_category_selector"
            android:title="@string/use_hierarchical_category_selector"
            android:summary="@string/use_hierarchical_category_selector_summary"
            android:defaultValue="true"/>
        <CheckBoxPreference android:key="hierarchical_category_selector_select_child_immediately"
            android:title="@string/hierarchical_category_selector_select_child_immediately"
            android:summary="@string/hierarchical_category_selector_select_child_immediately_summary"
            android:defaultValue="true"/>
        <CheckBoxPreference android:key="hierarchical_category_selector_income_expense"
            android:title="@string/hierarchical_category_selector_income_expense"
            android:summary="@string/hierarchical_category_selector_income_expense_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>


</PreferenceScreen>
