<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/database_backup">
        <Preference android:key="database_backup_folder"
                    android:title="@string/database_backup_folder"
                    android:summary="@string/database_backup_folder_summary" />
        <CheckBoxPreference android:key="auto_backup_enabled"
                            android:title="@string/auto_backup_enabled"
                            android:summary="@string/auto_backup_enabled_summary"
                            android:defaultValue="false"/>
        <com.flowzr.dialog.TimePreference android:key="auto_backup_time"
                                                            android:title="@string/auto_backup_time"
                                                            android:summary="@string/auto_backup_time_summary"
                                                            android:dependency="auto_backup_enabled"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/dropbox">
        <Preference android:title="@string/dropbox_authorize"
                    android:key="dropbox_authorize" android:summary="@string/dropbox_authorize_summary"/>
        <Preference android:title="@string/dropbox_unlink"
                    android:key="dropbox_unlink" android:summary="@string/dropbox_unlink_summary"/>
        <CheckBoxPreference android:key="dropbox_upload_backup"
                            android:title="@string/dropbox_upload_backup" android:summary="@string/dropbox_upload_backup_summary"
                            android:defaultValue="false"/>
        <CheckBoxPreference android:key="dropbox_upload_autobackup"
                            android:title="@string/dropbox_upload_autobackup" android:summary="@string/dropbox_upload_autobackup_summary"
                            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/gdocs_backup">
        <Preference android:key="google_drive_backup_account"
                    android:title="@string/google_drive_backup_account"
                    android:summary="@string/google_drive_backup_account_summary"/>
        <CheckBoxPreference android:key="google_drive_backup_full_readonly"
                            android:title="@string/google_drive_backup_full_readonly"
                            android:summary="@string/google_drive_backup_full_readonly_summary"
                            android:defaultValue="false"/>
        <EditTextPreference android:key="backup_folder"
                            android:title="@string/backup_folder"
                            android:summary="@string/backup_folder_summary"/>
    </PreferenceCategory>

</PreferenceScreen>
