<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <!-- group with single selected item so only one item is highlighted in the nav menu -->
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_action_accounts"
            android:id="@+id/drawer_item_account"
            android:title="@string/accounts"/>
        <item
            android:icon="@drawable/ic_action_view_as_list"
            android:id="@+id/drawer_item_blotter"
            android:title="@string/blotter"/>

        <item
            android:icon="@drawable/ic_action_mail"
            android:id="@+id/drawer_item_budget"
            android:title="@string/budgets"/>
        <item
            android:icon="@drawable/ic_action_cast"
            android:id="@+id/drawer_item_reports"
            android:title="@string/reports"/>
        <item
            android:icon="@drawable/ic_action_view_as_grid"
            android:id="@+id/drawer_item_entities"
            android:title="@string/entities"/>
        <item
            android:icon="@drawable/ic_action_cloud"
            android:id="@+id/drawer_item_sync"
            android:title="@string/flowzr_sync"/>
        <item
            android:icon="@drawable/ic_action_usb"
            android:id="@+id/drawer_item_backup"
            android:title="@string/backup"/>
        <item
            android:icon="@drawable/ic_action_settings"
            android:id="@+id/drawer_item_preferences"
            android:title="@string/preferences"/>
        <item
            android:icon="@drawable/ic_action_about"
            android:id="@+id/drawer_item_about"
            android:title="@string/about"/>
    </group>
</menu>