<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
-->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/content"
	android:fitsSystemWindows="true"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:paddingTop="?attr/actionBarSize"
		android:layout_gravity="center_horizontal"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<fr.ganfra.materialspinner.MaterialSpinner
			android:layout_margin="@dimen/space_normal"
			android:id="@+id/period"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			app:ms_multiline="false"
			app:ms_hint="@string/period">
		</fr.ganfra.materialspinner.MaterialSpinner>

		<TextView android:layout_width="wrap_content"
					style="@style/TextView"
				android:textSize="@dimen/text_large"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:text="@string/period_from" />
		<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:enabled="false" android:layout_marginLeft="3dp" android:layout_marginRight="3dp" android:id="@+id/bPeriodFrom"></Button><TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:text="@string/period_to" /><Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:enabled="false" android:layout_marginLeft="3dp" android:layout_marginRight="3dp" android:id="@+id/bPeriodTo"></Button>
		<Button android:layout_height="wrap_content" android:id="@+id/bNoFilter"
			android:text="@string/no_filter" android:drawableLeft="@drawable/ic_menu_filter_clear"
			android:layout_width="fill_parent" android:layout_marginLeft="3dp"
			android:layout_marginRight="3dp" android:layout_marginTop="3dp" />

	</LinearLayout>

	<include layout="@layout/toolbar"/>


</android.support.design.widget.CoordinatorLayout>