<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
-->
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/content"
	android:fitsSystemWindows="true"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:paddingTop="?attr/actionBarSize"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:paddingBottom="@dimen/dynamic_margin_narrow_vertical"
		android:paddingLeft="@dimen/dynamic_margin_narrow_horizontal"
		android:paddingRight="@dimen/dynamic_margin_narrow_horizontal"
		android:orientation="vertical">
		<View android:layout_height="1dp" android:background="@drawable/divider_horizontal_dark"
			android:layout_width="fill_parent" android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp" />
		<ScrollView android:layout_height="wrap_content"
			android:layout_weight="1" android:layout_width="fill_parent"
			android:padding="5dp">
			<LinearLayout android:layout_height="wrap_content"
				android:orientation="vertical" android:layout_width="fill_parent">
				<TextView android:layout_width="wrap_content" style="@style/TextView" android:textSize="@dimen/text_normal"
					android:layout_height="wrap_content" android:text="@string/start_date" />
				<Button android:layout_height="wrap_content" android:id="@+id/bStartDate"
					android:layout_width="fill_parent"></Button>
				<TextView android:layout_width="wrap_content" style="@style/TextView" android:textSize="@dimen/text_normal"
					android:layout_height="wrap_content" android:text="@string/interval" />
				<Spinner android:layout_height="wrap_content"
					android:layout_width="fill_parent" android:prompt="@string/recur_interval"
					android:id="@+id/intervalSpinner" />
				<LinearLayout android:layout_height="wrap_content"
					android:id="@+id/layoutInterval" android:layout_width="fill_parent"></LinearLayout>
				<TextView android:layout_width="wrap_content" style="@style/TextView" android:textSize="@dimen/text_normal"
					android:layout_height="wrap_content" android:text="@string/recur" />
				<Spinner android:layout_height="wrap_content" android:id="@+id/recurSpinner"
					android:layout_width="fill_parent" android:prompt="@string/recur" />
				<LinearLayout android:layout_height="wrap_content"
					android:layout_width="fill_parent" android:id="@+id/recurInterval"></LinearLayout>

			</LinearLayout>
		</ScrollView>

	</LinearLayout>

	<include layout="@layout/toolbar"/>


</android.support.design.widget.CoordinatorLayout>