<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
-->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/content"
	android:fitsSystemWindows="true"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:orientation="vertical"
		android:paddingTop="?attr/actionBarSize"
		xmlns:android="http://schemas.android.com/apk/res/android">

		<include layout="@layout/layout_title"/>
		<!--
			<TextView android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:layout_marginLeft="3dp" android:text="@string/attribute_name"/>
			<EditText android:layout_height="wrap_content" style="@style/EditText"
				android:layout_width="fill_parent" android:id="@+id/name" />
		-->



		<LinearLayout
			android:padding="@dimen/space_normal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<fr.ganfra.materialspinner.MaterialSpinner
				app:ms_enableFloatingLabel="true"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				app:ms_floatingLabelText="@string/attribute_type"
				android:id="@+id/type"
				android:entries="@array/attribute_types"
				android:prompt="@string/attribute_type" />
		</LinearLayout>


		<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			android:padding="@dimen/space_normal"
			android:orientation="vertical"
				android:id="@+id/values_layout">
				<TextView android:layout_height="wrap_content" style="@style/TextView"
					android:layout_width="fill_parent" android:layout_marginLeft="3dp" android:text="@string/attribute_values"/>
				<EditText android:layout_height="@dimen/recommended_touch_size" style="@style/TextView"
					android:layout_width="fill_parent" android:id="@+id/values" android:hint="@string/attribute_values_hint"/>
		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
						android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/space_normal"
				android:id="@+id/default_value_layout1">
				<TextView android:layout_height="wrap_content" style="@style/TextView"
					android:layout_width="fill_parent" android:layout_marginLeft="3dp" android:text="@string/attribute_default_value"/>
				<EditText android:layout_height="@dimen/recommended_touch_size" style="@style/TextView"
					android:layout_width="fill_parent" android:id="@+id/default_value_text" />
		</LinearLayout>

			<CheckBox android:layout_height="@dimen/recommended_touch_size" style="@style/CheckBox"
				android:padding="@dimen/space_normal"
				android:layout_width="fill_parent" android:id="@+id/default_value_check"
				android:text="@string/attribute_default_value"/>

		</LinearLayout>
	<include layout="@layout/toolbar"/>

</android.support.design.widget.CoordinatorLayout>
